fix links in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -218,7 +218,7 @@ tbody td a {
 
 .dark tbody td a,
 .dark :visited,
-a {
+.dark a {
   color: #EFEFEF;
 }
 
